--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ canvas {
 </head>
 <body>
 
-<script src="../code/main.js"></script>
+<script src="https://github.com/billykonstas/billykonstas.github.io/tree/master/code/main.js"></script>
 
 </body>
 </html>
