--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ canvas {
 </head>
 <body>
 
-<script src="../proj/main.js"></script>
+<script src="../proj/main.js" type="text/javascript"></script>
 
 </body>
 </html>
